Fix body height on Mobile Safari

--- a/app/assets/stylesheets/frontend/layout.scss
+++ b/app/assets/stylesheets/frontend/layout.scss
@@ -36,7 +36,7 @@ $extra-gutter: ($gutter * 3) / 2;
 
 body {
   box-sizing: border-box;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
